# evolution-remove-attachments

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  autogen.sh  configure.ac  org-gnome-remove-attachments.eplug.xml  org-gnome-remove-attachments.xml  remove-attachments.c
debian/: changelog  control  copyright  docs  evolution-remove-attachments.install  rules
po/: POTFILES.in  evolution-remove-attachments.pot
src/: Makefile.am  org-gnome-remove-attachments.eplug.xml  org-gnome-remove-attachments.xml  remove-attachments.c
