SUBDIRS = src po

ACLOCAL_AMFLAGS = -I m4

DPKG_DIST= \
	     debian/rules \
	     debian/changelog \
	     debian/copyright \
	     debian/compat \
	     debian/docs \
	     debian/control \
	     debian/evolution-remove-attachments.install

EXTRA_DIST = \
	$(INTLTOOL)		\
	po/POTFILES.in		\
	po/POTFILES		\
	autogen.sh		\
	ChangeLog

